--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-material": "^1.0.0-beta-11",
+    "vue-router": "^3.1.3",
     "vuelidate": "^0.7.5",
     "vuetify": "^2.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.2",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
